public/css/player.css
/* ... */
/* player */
#player-view {
   transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
   height: 300px;
}

#player {
   float: left;
   height: 100%;
   width: 75%;
   background: #1b1b1b;
}

#suggestion-feed {
   position: relative;
   float: right;
   width: 25%;
   height: 100%;
   background: #1b1b1b;
   overflow: hidden;
   overflow-y: scroll;
}

.feed-logo {
   position: absolute;
   top: 50%;
   right: 50%;
   margin-right: -90px;
   margin-top: -70px;
}

.suggestion {
   position: relative;
   height: 55px;
   width: 100%;
   overflow: hidden;
   color: #ababab;
   font-size: 12px;
   cursor: pointer;
}

.suggestion .details {
   margin-left: 75px;
   margin-right: 10px;
   margin-top: 8px;
   height: 36px;
   overflow: hidden;
}

.suggestion .artist {
   line-height: 18px;
   font-weight: 600;
   font-size: 12px;
}

.suggestion .title {
   line-height: 18px;
   font-size: 15px;
}

.suggestion:hover {
   background: #454545;
}

.suggestion .thumb {
   position: absolute;
   top: 8px;
   left: 10px;
}

/* resize buttons */
#resize-buttons {
   height: 15px;
   position: absolute;
   top: 0;
   left: 50%;
   margin-left: -37.5px;
   border-radius: 2px;
}

.resize-player {
   display: inline-block;
   width: 15px;
   margin-left: 2px;
   margin-right: 2px;
   line-height: 15px;
   vertical-align: center;
   height: 15px;
}

.size-button {
   background: #bababa;
}

.size-button:hover {
   background: #ababab;
}

#large-view .size-button {
   margin-top: 2px;
   height: 10px;
}

#normal-view .size-button {
   margin-top: 2px;
   height: 6px;
}

#no-view .size-button {
   margin-top: 2px;
   height: 2px;
}

.resize-player:hover {
   cursor: pointer;
}

.item-options {
   background-repeat: no-repeat;
   background-position: center;
}

.playing {
   background-image: url('/img/playing.png');
}

/* menus */
#add-menu {
   display: none;
   position: absolute;
   top: -140px;
   left: -50px;
}

.player-modal {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   position: absolute;
   width: 90%;
   left: 0;
   right: 0;
   margin: auto;
   max-width: 500px;
   top: 20%;
   z-index: 1000;
   background: white;
   padding-top: 20px;
}

.player-modal label {
   text-align: left;
}

.player-modal input[type=text] {
   position: relative;
   height: 25px;
   width: 90%;
   border: solid 1px #dfdfdf;
   display: inline-block;
   margin: auto;
}

.player-modal input[type=checkbox] {
   margin-right: 10px;
}


#notifications {
   position: fixed;
   right: 40px;
   bottom: 20px;
   text-align: right;
   z-index: 900;
}

.notify-box {
   max-width: 200px;
   min-width: 100px;
   position: relative;
   margin-top: 10px;
   padding: 15px;
   opacity: 0.8;
   color: #efefef;
   cursor: default;
   display: inline-block;
   text-align: left;
   font-weight: 550;
}

.notify-box:hover {
   opacity: 1;
}

.notify-box.default {
   background: #4511B8;
}

.close-notification.default {
   border: solid 2px #4511B8;
}

.notify-box.error {
   background: red;
}

.close-notification.error {
   border: solid 2px red;
}

.close-notification {
   position: absolute;
   height: 23px;
   width: 23px;
   top: -5px;
   right: -5px;
   background: url('/img/close.png') no-repeat center;
   background-color: black;
   cursor: pointer;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
}

input[type=text]:focus {
   transition: all 100ms linear;
}

.player-modal select {
   height: 29px;
   width: 20%;
   border-radius: 0px;
   border: solid 1px #dfdfdf;
   background: #efefef;
}

.player-modal .extract select {
   width: 150px;
}

.player-modal .sources {
   display: none;
}

.modal-section.link input[type=text] {
   border-radius: 0px;
   width: 70%;
}

.player-modal input[type=submit] {
   display: block;
}

.modal-section {
   position: relative;
   margin-bottom: 10px;
   width: 100%;
   white-space: nowrap;
   margin-left: 4%;
}

.modal-text {
   font-size: 14px;
   text-align: left;
   margin-left: 20px;
   margin-right: 20px;
}

.player-modal .form-button {
   margin-left: 4%;
   margin-bottom: 4%;
}

.section-title {
   font-weight: 700;
}

.section-title img {
   margin-right: 15px;
}

.form-button {
   border: 0;
   background: #4d70ea; 
   color: white;
   padding: 5px;
   padding-left: 15px;
   padding-right: 15px;
   margin-top: 20px;
}

.form-button:hover  {
   opacity: 0.8;
}

.close-modal {
   position: absolute;
   height: 23px;
   width: 23px;
   top: -5px;
   right: -5px;
   background: url('/img/close.png') no-repeat center;
   background-color: black;
   cursor: pointer;
   border: solid 2px white;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
}

.close-modal:hover {
   background: url('/img/close.png') no-repeat center;
   background-color: #cc181e;
}


.edit-container {
   display: none;
}

.new-list {
   position: relative;
   margin: 5px;
   margin-left: 20px;
   display: hidden;
}

.new-list input[type=text] {
   height: 25px;
   width: 90%;
   border-radius: 0px;
   border: solid 1px #cdcdcd;
   display: block;
}

.new-list .save-new,
.new-list .cancel-new {
   display: inline;
   opacity: 0.7;
   margin: 5px;
   cursor: pointer;
}

.new-list .save-new:hover,
.new-list .cancel-new:hover {
   opacity: 0.9;
}

.disabled.save-new {
   opacity: 0.3;
}

.disabled.save-new:hover {
   opacity: 0.3;
}

.click-menu {
   padding-top: 5px;
   padding-bottom: 5px;
   width: 180px;
   height: 120px;
   position: absolute;
   background: #fff;
   box-shadow: 0px 2px 5px #777777;
   border-radius: 4px;
   text-align: left;
   overflow: hidden;
   z-index: 1000;
}

.click-menu .link-options {
   overflow: hidden;
   position: absolute;
   height: 100%;
   width: 180px;
   left: 0px;
}

.menu-body {
   position: relative;
   width: 360px;
   height: 100%;
   left: 0px;
}

.menu-divide {
   width: 100%;
   border-top: solid 1px #dfdfdf;
}
/* ... */

